--- a/style.css
+++ b/style.css
@@ -21,9 +21,11 @@ body {
 }
 
 @media (max-width:768px) {
+
   .main-img {
     text-align: center;
   }
+
 }
 
 .main-wrap {
@@ -35,7 +37,7 @@ body {
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .task-row-wrapper {
@@ -115,7 +117,6 @@ li {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -137,7 +138,7 @@ li>label {
 }
 
 li>input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 
 button.delete img {
@@ -158,7 +159,7 @@ ul#completed-tasks label {
 
 /* Edit Task */
 ul li input[type=text] {
-  display: none
+  display: none;
 }
 
 ul li.edit-mode input[type=text] {
